[gd_scene load_steps=16 format=2]

[ext_resource path="res://Images/background/1.png" type="Texture" id=1]
[ext_resource path="res://Images/background/2.png" type="Texture" id=2]
[ext_resource path="res://Images/background/3.png" type="Texture" id=3]
[ext_resource path="res://Images/background/4.png" type="Texture" id=4]
[ext_resource path="res://Images/background/5.png" type="Texture" id=5]
[ext_resource path="res://Reusable Scenes/player.tscn" type="PackedScene" id=6]
[ext_resource path="res://TileSets/groundTile.tres" type="TileSet" id=7]
[ext_resource path="res://Reusable Scenes/woodPlank.tscn" type="PackedScene" id=8]
[ext_resource path="res://Reusable Scenes/Floater.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/levelStack2.gd" type="Script" id=10]
[ext_resource path="res://Reusable Scenes/pauseButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://Font/font_theme.tres" type="Theme" id=12]
[ext_resource path="res://Reusable Scenes/Pausemenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://Sounds/pushSFX.mp3" type="AudioStream" id=14]
[ext_resource path="res://Sounds/popSFX.mp3" type="AudioStream" id=15]

[node name="levelStack2" type="Node2D"]
script = ExtResource( 10 )
__meta__ = {
"_edit_vertical_guides_": [ 2560.0 ]
}
stack_item = ExtResource( 8 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 851967, 0, 0, 917503, 0, 0, 983039, 0, 0, 1048575, 0, 0, 1114111, 0, 0, 1179647, 0, 0, 1245183, 0, 0, 1179674, 8, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 0, 1179681, 0, 0, 1179682, 5, 0, 1310719, 0, 0, 1245210, 9, 0, 1245211, 4, 0, 1245212, 4, 0, 1245213, 4, 0, 1245214, 4, 0, 1245215, 4, 0, 1245216, 4, 0, 1245217, 4, 0, 1245218, 6, 0, 1376255, 0, 0, 1310746, 9, 0, 1310747, 4, 0, 1310748, 4, 0, 1310749, 4, 0, 1310750, 4, 0, 1310751, 4, 0, 1310752, 4, 0, 1310753, 4, 0, 1310754, 6, 0, 1441791, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 5, 0, 1376282, 9, 0, 1376283, 4, 0, 1376284, 4, 0, 1376285, 4, 0, 1376286, 4, 0, 1376287, 4, 0, 1376288, 4, 0, 1376289, 4, 0, 1376290, 4, 0, 1376291, 0, 0, 1376292, 0, 0, 1507327, 4, 0, 1441792, 4, 0, 1441793, 4, 0, 1441794, 4, 0, 1441795, 4, 0, 1441796, 4, 0, 1441797, 4, 0, 1441798, 6, 0, 1441818, 9, 0, 1441819, 4, 0, 1441820, 4, 0, 1441821, 4, 0, 1441822, 4, 0, 1441823, 4, 0, 1441824, 4, 0, 1441825, 4, 0, 1441826, 4, 0 )

[node name="player" parent="." instance=ExtResource( 6 )]
position = Vector2( 40, 528 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_limit_end = Vector2( 2560, 0 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 1920, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 1920.0
margin_bottom = 720.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 1920, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2"]
margin_right = 1920.0
margin_bottom = 720.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 1920, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer3"]
margin_right = 1920.0
margin_bottom = 720.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.7, 1 )
motion_mirroring = Vector2( 1920, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer4"]
margin_right = 1920.0
margin_bottom = 720.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer5"]
margin_right = 1920.0
margin_bottom = 720.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true

[node name="woodPlank" parent="." instance=ExtResource( 8 )]
position = Vector2( 384, 704 )

[node name="Floater" parent="." instance=ExtResource( 9 )]
position = Vector2( 597, 506 )
move_to = Vector2( 200, 0 )
move_from = Vector2( 0, 0 )
speed = 100.0

[node name="Floater2" parent="." instance=ExtResource( 9 )]
position = Vector2( 1181, 647 )
move_to = Vector2( 0, -100 )
move_from = Vector2( 0, 0 )

[node name="ImmovableObjects" type="CanvasLayer" parent="."]
layer = 100

[node name="balance" type="Label" parent="ImmovableObjects"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 16.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 22.0
theme = ExtResource( 12 )

[node name="push" type="Button" parent="ImmovableObjects"]
margin_left = 1181.0
margin_top = 96.0
margin_right = 1261.0
margin_bottom = 136.0
text = "Push"

[node name="pop" type="Button" parent="ImmovableObjects"]
margin_left = 1181.0
margin_top = 142.0
margin_right = 1261.0
margin_bottom = 182.0
text = "Pop"

[node name="pushSFX" type="AudioStreamPlayer2D" parent="ImmovableObjects"]
stream = ExtResource( 14 )
bus = "SFX"

[node name="popSFX" type="AudioStreamPlayer2D" parent="ImmovableObjects"]
stream = ExtResource( 15 )
bus = "SFX"

[node name="pauseButton" parent="ImmovableObjects" instance=ExtResource( 11 )]

[node name="Pausemenu" parent="." instance=ExtResource( 13 )]
visible = false

[node name="Warnings" type="CanvasLayer" parent="."]
layer = 100

[node name="underflowWarning" type="WindowDialog" parent="Warnings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -78.0
margin_right = 156.0
margin_bottom = 78.0
window_title = "WARNING"

[node name="Label" type="Label" parent="Warnings/underflowWarning"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = -51.0
margin_right = 132.0
margin_bottom = -1.0
theme = ExtResource( 12 )
text = "Popping this plank will lead to underflow"
align = 1
valign = 1
autowrap = true

[node name="underOK" type="Button" parent="Warnings/underflowWarning"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -54.0
margin_right = 40.0
margin_bottom = -28.0
theme = ExtResource( 12 )
text = "OK"

[node name="overflowWarning" type="WindowDialog" parent="Warnings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -78.0
margin_right = 156.0
margin_bottom = 78.0
window_title = "WARNING"

[node name="Label" type="Label" parent="Warnings/overflowWarning"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -40.0
margin_right = 114.0
margin_bottom = 3.0
theme = ExtResource( 12 )
text = "You don't have enough logs to push"
align = 1
valign = 1
autowrap = true

[node name="overOK" type="Button" parent="Warnings/overflowWarning"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -47.0
margin_right = 40.0
margin_bottom = -21.0
theme = ExtResource( 12 )
text = "OK"

[connection signal="input_event" from="woodPlank" to="." method="_on_woodPlank_input_event"]
[connection signal="button_up" from="ImmovableObjects/push" to="." method="_on_push_button_up"]
[connection signal="button_up" from="ImmovableObjects/pop" to="." method="_on_pop_button_up"]
[connection signal="button_up" from="ImmovableObjects/pauseButton" to="." method="_on_pauseButton_button_up"]
[connection signal="button_up" from="Pausemenu/resume" to="." method="_on_resume_button_up"]
[connection signal="button_up" from="Warnings/underflowWarning/underOK" to="." method="_on_underOK_button_up"]
[connection signal="button_up" from="Warnings/overflowWarning/overOK" to="." method="_on_overOK_button_up"]

[editable path="Pausemenu"]
